# godville-indicator

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  autogen.sh  configure.ac
data/: Makefile.am  godville.desktop.in  net.godville.indicator.gschema.xml
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/pixmaps/: Makefile.am
debian/: README.Debian  README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  godville.cron.d.ex  godville.default.ex  godville.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
po/: POTFILES.in  POTFILES.skip
src/: Makefile.am  godville  godville-application_window.vala  godville-indicator.vala  godville-status.vala  godville.vala  main.vala
